<resources>
    <string name="app_name">知识树</string>
    <string name="splash_text">知识树，个性提高新起点</string>
    <string name="version_number">版本号：a_0.1.0</string>
    <string name="company_info">copyright@2017 成都麦普乐科技</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_name_hint">输入知识树账号</string>
    <string name="user_password_hint">输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="regist_user">注册账号</string>
    <string name="register">注册</string>
    <string name="input_phoneoremail">输入手机号或邮箱账号</string>
    <string name="set_password">设置密码</string>
    <string name="input_code">输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="reset_password">重设密码</string>
    <string name="please_input_right_user">请输入正确的手机号码或者邮箱</string>
    <string name="userName_not_null">账号不能为空</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="verify_code_not_null">验证码不能为空</string>
    <string name="isNotNetWork">网络连接错误，请检查手机网络再试！</string>
    <string name="sever_busy">服务器繁忙，请稍后再试</string>
    <string name="reg_success">注册成功</string>
    <string name="verfy_error_or_outtime">验证码错误或过期</string>
    <string name="reg_fail">注册失败</string>
    <string name="user_exist">手机号、邮箱已经注册</string>
    <string name="user_form_error">手机号格式不对</string>
    <string name="parm_lost">缺少参数</string>
    <string name="send_sueecss">发送成功</string>
    <string name="welcome_to_knowledge_tree">欢迎入住知识树</string>
    <string name="start">开启个性学习新旅程</string>
    <string name="fix_password_suc">重置密码成功</string>
    <string name="user_not_exist">用户不存在，请检查用户名是否正确</string>
    <string name="knowledge_tree">知识树</string>
    <string name="test_self">自测</string>
    <string name="find">发现</string>
    <string name="my">我的</string>
    <string name="nick_name">昵称</string>
    <string name="set">设置</string>
    <string name="change_password">修改密码</string>
    <string name="take_photo">照相</string>
    <string name="choose_from_album">从相册选取</string>
    <string name="choose_system_avatar">选择系统头像</string>
    <string name="upload_avatar">上传头像中</string>
    <string name="save">保存</string>
    <string name="input_nicke_name">填写昵称</string>
    <string name="just_10_string">仅支持输入10个字符</string>
    <string name="fix_success">修改昵称成功</string>
    <string name="fix_fail">修改失败</string>
    <string name="input_old_password">填写旧密码</string>
    <string name="input_new_password">填写新密码</string>
    <string name="re_input_new_password">重复新密码</string>
    <string name="more_than_6_string">请至少输入6位字符</string>
    <string name="old_and_repsd_not_equal">新密码和重复新密码不一致</string>
    <string name="fix_psd_success">修改密码成功</string>
    <string name="psd_not_equal">两次密码不一致</string>
    <string name="old_psd_error">原始密码错误</string>
    <string name="chek_updata">检查更新</string>
    <string name="update_new_version">检查最新版本</string>
    <string name="about">关于</string>
    <string name="clear_cache">清除缓存</string>
    <string name="login_out">退出账号</string>
    <string name="clearing">清理中...</string>
    <string name="clear_over">已清除缓存</string>
    <string name="no_cache">目前没有缓存可清除</string>
    <string name="download_new_version">下载最新版本</string>
    <string name="system_avator">系统头像</string>
    <string name="no_net">网络连接失败哦，进入知识黑洞了！</string>
    <string name="no_test">主人还没有自测评价</string>
    <string name="good_for_test">自测的好处？</string>
    <string name="testing_start">立即开始自测</string>
    <string name="self_test_get">自测获得</string>
    <string name="self_test_guide_test1">提分目标越来越准</string>
    <string name="self_test_guide_test11">细分到每一周每一天，量化到题。为主人量身打造实用知识点进阶计划。</string>
    <string name="self_test_guide_test2">细化知识点学习</string>
    <string name="self_test_guide_test22">未掌握的循序渐进，已掌握的变式提高。每日、每周提分成果可见可达。</string>
    <string name="self_test_guide_test3">全面升学能力评估</string>
    <string name="self_test_guide_test33">每达成一次进步，每进行一次测验，主人将实时了解自己在班级、地区的竞争优势。</string>
    <string name="test_self_info">自测基本信息</string>
    <string name="subject">学科</string>
    <string name="math">数学</string>
    <string name="test_rule">考试得分按照100分制</string>
    <string name="start_test">开始</string>
    <string name="score">分数</string>
    <string name="grade">年级</string>
    <string name="test_count">题量</string>
    <string name="please_input_score">请输入分数</string>
    <string name="three_characters">剩余3字符</string>
    <string name="one_characters">剩余1字符</string>
    <string name="zero_characters">剩余0字符</string>
    <string name="two_characters">剩余2字符</string>
    <string name="confirm">确认</string>
    <string name="choose_grade">选择年级</string>
    <string name="choose_count">选择题量</string>
    <string name="over">完成</string>
    <string name="self_answer">自测答题</string>
    <string name="answer_all">真棒！全部答完了！</string>
    <string name="five_auto_enter">5s自动进入</string>
    <string name="look_test_info">查看自测统计</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
