<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:id="@+id/pop_layout"
    android:orientation="vertical">

    <TextView
        android:id="@+id/take_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/combined_shape"
        android:drawablePadding="32dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/take_photo"
        android:textColor="#8A000000"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/choose_album"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/picture"
        android:drawablePadding="32dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/choose_from_album"
        android:textColor="#8A000000"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/choose_system"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/copy_icon"
        android:drawablePadding="32dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/choose_system_avatar"
        android:textColor="#8A000000"
        android:textSize="16dp" />

</LinearLayout>
