<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F6F7"
    android:orientation="vertical"
    tools:context="com.max_plus.knowledgetree.activity.FixNickNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FF37C9CE"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:background="@drawable/common_ic_exit" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16.3dp"
            android:background="#1F000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/nick_name"
            android:textColor="#FFFFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <EditText
        android:id="@+id/et_inputNickName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:hint="@string/input_nicke_name"
        android:maxLength="20"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textColor="@color/input_text" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/just_10_string"
        android:maxLength="40"
        android:singleLine="true"
        android:textColor="@color/input_text"
        android:textSize="16dp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="28dp" />

    <Button
        android:id="@+id/btn_fix"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_corner_grey"
        android:text="@string/save"
        android:textColor="#FFFFFFFF"
        android:textSize="20dp" />

</LinearLayout>
