<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/score_pop_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <EditText
            android:id="@+id/et_score"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFF5F6F7"
            android:hint="@string/please_input_score"
            android:maxLength="3"
            android:numeric="integer"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textSize="16dp" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_characters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:text="@string/three_characters"
            android:textColor="#FF000000"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:paddingRight="16dp"
            android:text="@string/confirm"
            android:textColor="#FF17B3B9"
            android:textSize="16dp" />
    </LinearLayout>


</LinearLayout>
