<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F6F7"
    android:orientation="vertical"
    tools:context="com.max_plus.knowledgetree.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FF37C9CE"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:background="@drawable/common_ic_exit" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="16.3dp"
            android:background="#1F000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/set"
            android:textColor="#FFFFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/arrow"
        android:gravity="center_vertical"
        android:maxLength="20"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:text="@string/about"
        android:textColor="#FF000000"
        android:textSize="16dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="#FF000000" />

    <TextView
        android:id="@+id/tv_check_update"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/arrow"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/chek_updata"
        android:textColor="#FF000000"
        android:textSize="16dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="#FF000000" />

    <LinearLayout
        android:id="@+id/ll_cache"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/clear_cache"
            android:textColor="#FF000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/arrow"
            android:gravity="right|center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="0KB"
            android:textColor="#FF000000"
            android:textSize="16dp" />
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:background="#FF000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login_out"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/shape_corner_red"
            android:text="@string/login_out"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />
    </LinearLayout>


</LinearLayout>
